objects/Territory_Selection__c.object
<CustomObject>
    <label>Territory Selection</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Territory Selection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Selections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Asia_Countries__c</fullName>
        <label>Asia Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BRUNEI DARUSSALAM</fullName>
                </value>
                <value>
                    <fullName>CAMBODIA</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>CHRISTMAS IS. (AUSTRAILIA</fullName>
                </value>
                <value>
                    <fullName>COCOS(KEELING) IS. (AUST)</fullName>
                </value>
                <value>
                    <fullName>COOK ISLANDS</fullName>
                </value>
                <value>
                    <fullName>EAST TIMOR</fullName>
                </value>
                <value>
                    <fullName>FIJI</fullName>
                </value>
                <value>
                    <fullName>FRENCH POLYNESIA</fullName>
                </value>
                <value>
                    <fullName>GREATER CHINA ADJUSTMENT</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HEARD &amp; MCDONALD IS.(AUS)</fullName>
                </value>
                <value>
                    <fullName>HONG KONG</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>INDONESIA</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>JAPAN ADJUSTMENT</fullName>
                </value>
                <value>
                    <fullName>JAPAN-OCEANIC ADJUSTMENT</fullName>
                </value>
                <value>
                    <fullName>JOHNSTON,MIDWAY,WAKE ISLS</fullName>
                </value>
                <value>
                    <fullName>KIRIBATI</fullName>
                </value>
                <value>
                    <fullName>KOREA,DEM PEOPLES REP</fullName>
                </value>
                <value>
                    <fullName>KOREA, REPUBLIC OF</fullName>
                </value>
                <value>
                    <fullName>KOSEA ADJUSTMENT</fullName>
                </value>
                <value>
                    <fullName>LAOS</fullName>
                </value>
                <value>
                    <fullName>MACAU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Europe_Countries__c</fullName>
        <label>Europe Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
                <value>
                    <fullName>BRITISH INDIAN OCEAN TERR</fullName>
                </value>
                <value>
                    <fullName>BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BURKINA FASO</fullName>
                </value>
                <value>
                    <fullName>BURUNDI</fullName>
                </value>
                <value>
                    <fullName>CAMEROON</fullName>
                </value>
                <value>
                    <fullName>CAPE VERDE</fullName>
                </value>
                <value>
                    <fullName>CENTRAL AFRICAN REPUBLIC</fullName>
                </value>
                <value>
                    <fullName>CHAD</fullName>
                </value>
                <value>
                    <fullName>COMOROS</fullName>
                </value>
                <value>
                    <fullName>CONGO</fullName>
                </value>
                <value>
                    <fullName>CROATIA</fullName>
                </value>
                <value>
                    <fullName>CYPRUS</fullName>
                </value>
                <value>
                    <fullName>CZECHOSLOVAKIA</fullName>
                </value>
                <value>
                    <fullName>CZECH REPUBLIC</fullName>
                </value>
                <value>
                    <fullName>DENMARK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Americas_Countries__c</fullName>
        <label>Americas Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA &amp; BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>BRITISH VIRGIN ISLANDS</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>CAYMAN ISLANDS</fullName>
                </value>
                <value>
                    <fullName>CHILE</fullName>
                </value>
                <value>
                    <fullName>COLOMBIA</fullName>
                </value>
                <value>
                    <fullName>COSTA RICA</fullName>
                </value>
                <value>
                    <fullName>CUBA</fullName>
                </value>
                <value>
                    <fullName>DOMINICA</fullName>
                </value>
                <value>
                    <fullName>DOMINICAN REPUBLIC</fullName>
                </value>
                <value>
                    <fullName>ECUADOR</fullName>
                </value>
                <value>
                    <fullName>EL SALVADOR</fullName>
                </value>
                <value>
                    <fullName>FALKLAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>GRENADA</fullName>
                </value>
                <value>
                    <fullName>GUATEMALA</fullName>
                </value>
                <value>
                    <fullName>GUYANA</fullName>
                </value>
                <value>
                    <fullName>HAITI</fullName>
                </value>
                <value>
                    <fullName>HONDURAS</fullName>
                </value>
                <value>
                    <fullName>JAMAICA</fullName>
                </value>
                <value>
                    <fullName>MEXICO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Europe_Countries_1__c</fullName>
        <description>Europe Countries 1 is created to workaround the limitation of choosing more than 100 items from a picklist</description>
        <inlineHelpText>Choose Europe Countries that starts with A - L</inlineHelpText>
        <label>Europe Countries 1 (A – L)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
                <value>
                    <fullName>BRITISH INDIAN OCEAN TERR</fullName>
                </value>
                <value>
                    <fullName>BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BURKINA FASO</fullName>
                </value>
                <value>
                    <fullName>BURUNDI</fullName>
                </value>
                <value>
                    <fullName>CAMEROON</fullName>
                </value>
                <value>
                    <fullName>CAPE VERDE</fullName>
                </value>
                <value>
                    <fullName>CENTRAL AFRICAN REPUBLIC</fullName>
                </value>
                <value>
                    <fullName>CHAD</fullName>
                </value>
                <value>
                    <fullName>COMOROS</fullName>
                </value>
                <value>
                    <fullName>CONGO</fullName>
                </value>
                <value>
                    <fullName>CROATIA</fullName>
                </value>
                <value>
                    <fullName>CYPRUS</fullName>
                </value>
                <value>
                    <fullName>CZECHOSLOVAKIA</fullName>
                </value>
                <value>
                    <fullName>CZECH REPUBLIC</fullName>
                </value>
                <value>
                    <fullName>DENMARK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Europe_Countries_2__c</fullName>
        <description>Europe Countries 2 is created to workaround the limitation of choosing more than 100 items from  a picklist</description>
        <inlineHelpText>Choose Europe Countries that starts with M - Z</inlineHelpText>
        <label>Europe Countries 2 (M – Z)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MADAGASCAR</fullName>
                </value>
                <value>
                    <fullName>MALAWI</fullName>
                </value>
                <value>
                    <fullName>MALI</fullName>
                </value>
                <value>
                    <fullName>MALTA</fullName>
                </value>
                <value>
                    <fullName>MARTINIQUE</fullName>
                </value>
                <value>
                    <fullName>MAURITANIA</fullName>
                </value>
                <value>
                    <fullName>MAURITIUS</fullName>
                </value>
                <value>
                    <fullName>MAYOTTE</fullName>
                </value>
                <value>
                    <fullName>MOLDOVA, REPUBLIC OF</fullName>
                </value>
                <value>
                    <fullName>MONACO</fullName>
                </value>
                <value>
                    <fullName>MOROCCO</fullName>
                </value>
                <value>
                    <fullName>MOZAMBIQUE</fullName>
                </value>
                <value>
                    <fullName>NAMIBIA</fullName>
                </value>
                <value>
                    <fullName>NETHERLANDS</fullName>
                </value>
                <value>
                    <fullName>NEW CALEDONIA</fullName>
                </value>
                <value>
                    <fullName>NIGER</fullName>
                </value>
                <value>
                    <fullName>NIGERIA</fullName>
                </value>
                <value>
                    <fullName>NORWAY</fullName>
                </value>
                <value>
                    <fullName>OMAN</fullName>
                </value>
                <value>
                    <fullName>PAKISTAN</fullName>
                </value>
                <value>
                    <fullName>POLAND</fullName>
                </value>
                <value>
                    <fullName>PORTUGAL</fullName>
                </value>
                <value>
                    <fullName>QATAR</fullName>
                </value>
                <value>
                    <fullName>REPUBLIC OF MONTENEGRO</fullName>
                </value>
                <value>
                    <fullName>REPUBLIC OF SERBIA</fullName>
                </value>
                <value>
                    <fullName>REUNION</fullName>
                </value>
                <value>
                    <fullName>ROMANIA</fullName>
                </value>
                <value>
                    <fullName>RUSSIAN FEDERATION</fullName>
                </value>
                <value>
                    <fullName>RWANDA</fullName>
                </value>
                <value>
                    <fullName>SAN MARINO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asia_Countries_Print_1__c</fullName>
        <label>Asia Countries Print 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asia_Countries_Print_2__c</fullName>
        <label>Asia Countries Print 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asia_Countries_Print_3__c</fullName>
        <label>Asia Countries Print 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Europe_Countries_Print_1__c</fullName>
        <label>Europe Countries Print 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Europe_Countries_Print_2__c</fullName>
        <label>Europe Countries Print 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Europe_Countries_Print_3__c</fullName>
        <label>Europe Countries Print 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Americas_Countries_Print_1__c</fullName>
        <label>Americas Countries Print 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Americas_Countries_Print_2__c</fullName>
        <label>Americas Countries Print 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Americas_Countries_Print_3__c</fullName>
        <label>Americas Countries Print 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>